# little-walk-auth

./: .dockerignore  .env  Cargo.toml  Dockerfile
curl/: login_by_password.curl  signup.curl  signup.json  verify_token.curl
src/: handlers.rs  main.rs
src/core/: entities.rs
