[package]
name = "little-walk-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
auth-service = { git = "https://github.com/wangjun861205/auth-service.git" }
dotenv = "0.15.0"
env_logger = "0.10.0"
redis = { git = "https://github.com/redis-rs/redis-rs.git", version = "0.23.2", features = [
    "tokio-comp",
] }
reqwest = "0.11.22"
serde = "1.0.189"
sqlx = { version = "0.7.2", features = ["postgres"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
