[package]
name = "little-walk-auth"
version = "0.1.0"
edition = "2021"

[lib]
name = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
auth-service = { git = "https://github.com/wangjun861205/auth-service.git" }
dotenv = "0.15.0"
env_logger = "0.10.0"
hmac = "0.12.1"
jwt = "0.16.0"
mongodb = "2.7.0"
nb-from-env = "0.2.1"
redis = { git = "https://github.com/redis-rs/redis-rs.git", version = "0.24.0", features = [
    "tokio-comp",
] }
reqwest = "0.11.22"
serde = "1.0.189"
sha2 = "0.10.8"
sqlx = { version = "0.7.2", features = ["postgres"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
